samples/_failures_safe/1761078324_c4e09a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8470c4fa.c: In function ‘main’:
./samples/SAFE/__tmp_8470c4fa.c:157:9: error: expected declaration or statement at end of input
  157 |         }
      |         ^
./samples/SAFE/__tmp_8470c4fa.c:157:9: error: expected declaration or statement at end of input
